Fix code block overflow on mobile breaking the layout

--- a/_sass/paper/_typography.sass
+++ b/_sass/paper/_typography.sass
@@ -62,6 +62,7 @@ blockquote
 
 pre
   background-color: $theme01
+  overflow-x: scroll
 
 code
   background-color: $theme01
